# charnn

./: LICENCE  README.md  pyproject.toml
data/raw/: input.txt  input_short.txt
docs/: char_rnn_explanation.md
models/: char_rnn_1.py  char_rnn_2.py  char_rnn_3.py  export_to_sheets.py  inference.py
models/saved/: model_state_500000.pt  vocab.json
models/sheets_export/: README.txt  Whh.csv  Why.csv  Wxh.csv  bh.csv  by.csv  sheet_template.txt  vocab.csv
web/: app.py  requirements.txt
web/templates/: index.html
