[tool.poetry]
name = "charnn"
version = "0.1.0"
description = "A Python project by Neural Aspect Ltd"
authors = ["Neural Aspect Ltd"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.5"
torch = "^2.7.0"
pandas = "^2.2.3"
flask = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 